# VAE-based-Medical-Image-Generator

./: LICENSE  README.md  pyproject.toml
models/bloodmnist/cvae/lr-0.0005-bs-64-latent-128/: checkpoint_100.pt
models/bloodmnist/cvae/lr-0.0005-bs-64-latent-128/logs/: events.out.tfevents.1688729758.workstation.58803.0
models/bloodmnist/cvae/lr-0.0005-bs-64-latent-24/: checkpoint_50.pt
models/bloodmnist/cvae/lr-0.0005-bs-64-latent-24/logs/: events.out.tfevents.1688738386.workstation.86999.0
models/bloodmnist/cvae/lr-0.001-bs-64-latent-128/: checkpoint_100.pt
models/bloodmnist/cvae/lr-0.001-bs-64-latent-64/: checkpoint_90.pt
models/bloodmnist/cvae/lr-0.002-bs-64-latent-128/: checkpoint_40.pt
models/chestmnist/cvae/lr-0.001-bs-64-latent-128/: checkpoint_100.pt
models/chestmnist/cvae/lr-0.001-bs-64-latent-64/: checkpoint_100.pt
models/mnist/cvae/lr-0.001-bs-64-latent-128/: checkpoint_100.pt
models/pneumoniamnist/cvae/lr-0.0001-bs-64-latent-256/: checkpoint_100.pt
models/pneumoniamnist/cvae/lr-0.001-bs-64-latent-128/: checkpoint_100.pt
src/vae_based_medical_image_generator/: main.py  train.py
src/vae_based_medical_image_generator/data/: dataset.py
src/vae_based_medical_image_generator/metrics/: kl_divergence.py  reconstruction.py
src/vae_based_medical_image_generator/model/: cvae.py  loss.py  vae-pytorch.py  vae.py
src/vae_based_medical_image_generator/notebooks/: attached  dataset.ipynb  evaluation.ipynb  mnist_tests.ipynb  model  model_viz.ipynb  training.ipynb  training_cvae.ipynb  training_vae.ipynb
(+21 files in other folders)
