[tool.poetry]
name = "vae-based-medical-image-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "vae_based_medical_image_generator", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
medmnist = "^2.2.2"
matplotlib = "^3.7.1"
plotly = "^5.15.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.33.0"
ipykernel = "^6.23.1"

[tool.yapf]
COLUMN_LIMIT = 140

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
